Fix gap in navbar all works

--- a/components/Background/Background.module.css
+++ b/components/Background/Background.module.css
@@ -47,9 +47,6 @@
         left: 0;
         right: 0;
     }
-    /* .video {
-        display: none;
-    } */
 }
 
 @media screen and (min-width: 1887px) {
