--- a/components/Navbar/NavbarAllWorks.module.css
+++ b/components/Navbar/NavbarAllWorks.module.css
@@ -67,8 +67,16 @@
 
 @media screen and (max-width: 1200px) {
     .nav {
-        justify-content: space-between;
+        justify-content: space-around;
         padding: 10px 20px;
+    }
+    .linkContainer {
+        gap: 0.5rem;
+    }
+}
+@media screen and (max-width: 1300px) {
+    .linkContainer {
+        gap: 1rem;
     }
 }
 
